@@ -650,6 +650,7 @@ CPreferencesRem::CPreferencesRem(CRemoteConnect *conn)
 		EC_PREFS_SERVERS |
 		EC_PREFS_FILES |
 		EC_PREFS_SRCDROP |
+		EC_PREFS_DIRECTORIES |
 		EC_PREFS_SECURITY |
 		EC_PREFS_CORETWEAKS |
 		EC_PREFS_REMOTECONTROLS |
