@@ -89,6 +89,7 @@ Version 2.3.0 - The river knows.
 		* Show connected friends in blue in the friend list
 		* Show total upload/download ratio in statistic tree
 		* Fixed category administration in remote gui
+		* Implement directory preferences in remote gui
 
 	Vollstrecker:
 		* Unify copyright lines
